<resources>
    <string name="app_name">FirebaseEmail</string>
    <string name="title">약   쏙</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="modify">수정</string>
    <string name="yse">예</string>
    <string name="no">아니오</string>

    <string name="kakao_app_key">3d259e6f8692116e142ab9ac23448ebf</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="findpw">비밀번호 재설정</string>
    <string name="pwok">비밀번호 확인</string>
    <string name="findemail">이메일 찾기</string>

    <string name="writename">이름을 입력하세요.</string>
    <string name="writephone">전화번호를 입력하세요.</string>
    <string name="writepassword">비밀번호를 입력하세요.</string>
    <string name="writecheckpassword">비밀번호 확인을 입력하세요.</string>
    <string name="notmatchpass">비밀번호가 일치하지 않습니다.</string>

    <string name="success_login">로그인 성공</string>
    <string name="failed_login">로그인 실패</string>
    <string name="backlogin">로그인으로 돌아가기</string>
    <string name="dlogin">────── 다른 방법으로 로그인 ──────</string>
    <string name="reallogout">정말 로그아웃을 하시겠습니까?</string>

    <string name="usercheck">아직 계정이 없으신가요?</string>
    <string name="makeuser">계정 만들기</string>
    <string name="writeemail">이메일을 입력하세요.</string>
    <string name="sendemail">이메일 발송</string>
    <string name="sendverifyemail">인증 메일 전송</string>
    <string name="emailsending">이메일을 발송하였습니다.</string>
    <string name="emailfail">이메일 발송에 실패하였습니다.</string>
    <string name="emailauth1">회원가입시 최초 1회 이메일 인증이 필요합니다.</string>
    <string name="emailauth2">이메일 인증이 확인되지않으면 이후 로그인에 제한될 수 있습니다</string>
    <string name="emailauth3">입력하신 이메일에서 인증을 진행해주시기 바랍니다.</string>
    <string name="authemailpw">발송된 메일을 통해 비밀번호를 재설정하실 수 있습니다.</string>

    <string name="notvaildemail">이메일 형식이 일치하지 않습니다.</string>

    <string name="review">리뷰 게시판</string>
    <string name="drugmap">약국 찾기</string>
    <string name="finddrugname">이름으로 검색</string>
    <string name="finddrugshape">모양으로 검색</string>

    <string name="success_signup">회원가입 성공</string>
    <string name="failed_signup">회원가입 실패</string>
    <string name="alreadyemail">이미 존재하는 계정입니다.</string>

    <string name="logoutsuccess">로그아웃 되었습니다.</string>

    <string name="signin">로그인</string>
    <string name="signout">로그아웃</string>
    <string name="signup">회원가입</string>
    <string name="userinfo">회원정보</string>
    <string name="name">이름</string>
    <string name="phone">전화번호</string>
    <string name="emailverify">"이메일 인증을 완료해주세요."</string>
    <string name="plzinpytpassword">변경할 비밀번호를 입력해주세요.</string>
    <string name="plzinputname">변경할 이름을 입력해주세요.</string>
    <string name="plzinputphone">변경할 전화번호를 입력해주세요.</string>
    <string name="notvalidpassword">비밀번호 형식이 올바르지 않습니다. 4–16자 사이로 입력해주세요.</string>
    <string name="notvalidphone"> 전화번호 형식이 올바르지 않습니다. -없이 숫자만 작성해주세요.</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="alram">알람</string>

    <string name="detailText">상세정보</string>
    <string name="textview3String">* 품목명 </string>
    <string name="textViewString">helloworld</string>
    <string name="textViewstr">helloworld</string>
    <string name="editSearchStr">검색어를 입력하세요.</string>
    <string name="buttonStr">검색</string>
    <string name="nameText">품목명 :</string>
    <string name="companyText">업소명:</string>
    <string name="classNameText">분류명:</string>
    <string name="ectOtcText">전문/일반 구분:</string>

    <string name="mapTitle">약국 찾기</string>
    <string name="searchvillage">동 이름으로 검색하세요.</string>
    <string name="searchneardrug">내 주변 약국 찾기</string>
    <string name="slidingup">약국 검색 후 이곳에서 결과를 확인할 수 있습니다.</string>

    <string name="titleEditTextString">제목</string>
    <string name="contentEditTextString">내용</string>
    <string name="itemPostTitle">타이틀</string>
    <string name="contentsTextViewString">TextView</string>
    <string name="dateString">2020-05-11</string>
    <string name="titleText">게시글    작성</string>
    <string name="stringtitle">REVIEW</string>
    <string name="texttext">TextView</string>

    <string name="deletString">삭제</string>

    <string name="SearchList">모양으로 검색</string>
    <!--색상 버튼-->
    <string name="Colorlist">색상</string>
    <string name="buttonWhite">하양</string>
    <string name="buttonYellow">노랑</string>
    <string name="buttonOrange">주황</string>
    <string name="buttonPink">분홍</string>
    <string name="buttonRed">빨강</string>
    <string name="buttonBrown">갈색</string>
    <string name="buttonYellowgreen">연두</string>
    <string name="buttonGreen">초록</string>
    <string name="buttonBluishgreen">청록</string>
    <string name="buttonBlue">파랑</string>
    <string name="buttonNavy">남색</string>
    <string name="buttonPurple">자주</string>
    <string name="buttonViolet">보라</string>
    <string name="buttonGray">회색</string>
    <string name="buttonBlack">검정</string>
    <string name="buttonTransparente">투명</string>
    <string name="blanktext"> </string>
    <!--모양 버튼-->
    <string name="Shapelist">모양</string>
    <string name="buttonCircle">원형</string>
    <string name="buttonOval">타원</string>
    <string name="buttonSemicircle">반원</string>
    <string name="buttonTriangle">삼각형</string>
    <string name="buttonSquare">사각형</string>
    <string name="buttonDiamond">마름모</string>
    <string name="buttonRectangle">장방형</string>
    <string name="buttonPentagon">오각형</string>
    <string name="buttonHexagon">육각형</string>
    <string name="buttonOctagon">팔각형</string>
    <string name="buttonEct">기타</string>
    <!--제형 버튼-->
    <string name="Typelist">제형</string>
    <string name="buttonTablet">정제류</string>
    <string name="buttonHardcapsule">경질캡슐</string>
    <string name="buttonSoftcapsul">연질캡슐</string>
    <string name="buttonEct2">기타</string>
    <!--식별자 표시 edit-->
    <string name="Markserach">──── 식별 표시로 검색────</string>
    <string name="TextFront">식별자 앞 : </string>
    <string name="TextBack">식별자 뒤 : </string>
    <string name="markedit">"대소문자를 구분하여 입력하여 주세요!"</string>
    <!--초기화 버튼-->
    <string name="buttonResearch">검색 초기화</string>
    <string name="facebook_app_id">2761712704064422</string>




</resources>