<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_header_selector"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text= "@string/title"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="50dp"
        android:text="@string/email"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/et_eamil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:cursorVisible="true"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_eamil"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/password"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/et_password"
        android:layout_below="@id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="350dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_state"
            android:onClick="signIn"
            android:text="@string/signin"
            android:textColor="#FFFFFF" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_findpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="비밀번호 찾기"
            android:layout_centerHorizontal="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="430dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/usercheck" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:text="@string/makeuser"
            android:textAllCaps="false"
            android:textColor="#2A49F3"
            android:textColorHint="#5A7CAA"
            android:layout_centerHorizontal="true"/>
    </LinearLayout>

</RelativeLayout>
