<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
                android:id="@+id/reviewButton"
                android:layout_width="64dp"
                android:layout_height="67dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="250dp"
                android:background="@drawable/mainbutton_state"
                android:src="@drawable/ic_view_list_black_24dp" />

        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="64dp"
            android:layout_height="67dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/mainbutton_state"
            android:src="@drawable/ic_add_location_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ImageButton"
            android:layout_width="64dp"
            android:layout_height="67dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/mainbutton_state"
            android:src="@drawable/ic_search_black_24dp" />

        <ImageButton
            android:id="@+id/Button"
            android:layout_width="64dp"
            android:layout_height="67dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/mainbutton_state"
            android:src="@drawable/ic_note_add_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="320dp"
        android:text="@string/review"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="320dp"
        android:text="@string/drugmap"
        android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="320dp"
            android:text="@string/finddrugname"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="320dp"
            android:text="@string/finddrugshape"
            android:textSize="15sp" />
    </LinearLayout>


</FrameLayout>
