<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapMainActivity">

    <!--검색창, 검색 버튼 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/searchvillage" />

        <Button
            android:id="@+id/serach_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="@string/buttonStr"
            android:textSize="12sp" />
        <Button
            android:id="@+id/pharm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchneardrug"
            android:textSize="12sp"/>
    </LinearLayout>
    <!--지도 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            tools:context=".MapsActivity" />
    </LinearLayout>

    <!--검색 결과창 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <SlidingDrawer
            android:id="@+id/slidingdrawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:content="@+id/content"
            android:handle="@+id/handle"
            android:orientation="vertical">

            <Button
                android:id="@+id/handle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/slidingup" />

            <!--스크롤뷰 레이아웃 -->
            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="200dp"
                android:background="#FFFFFF"
                android:orientation="vertical">


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="442dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </ScrollView>
            </LinearLayout>
        </SlidingDrawer>
    </LinearLayout>

</RelativeLayout>