<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="230dp"
    android:layout_marginBottom="230dp"
    android:layout_centerHorizontal="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tv_password"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:inputType="textPassword"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/signup_password"
            android:layout_gravity="center"
            android:layout_marginTop="39dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/negativebutton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/positivebutton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="70dp"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:text="@string/ok" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="63dp"
            android:layout_marginRight="50dp"
            android:text="@string/password" />
    </RelativeLayout>
</RelativeLayout>